[package]
name = "dockerust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.18", features = ["derive"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
nix = "0.26.1"
unshare = "0.7.0"
resolve-path = "0.1.0"
